--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,13 @@ html {
   --imp-text-color: #c770f0;
 }
 
+.contact-info {
+  display: none;
+  font-size: 0.8em;
+  margin-top: 5px;
+}
+
+
 .purple {
   color: var(--imp-text-color) !important;
 }
