--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,33 @@
+@keyframes minimizeLogo {
+  from {
+    width: 85%;
+    height: auto;
+    right: 0;
+    bottom: 0;
+  }
+  to {
+    width: 50px;
+    height: 50px;
+    right: 10px;
+    bottom: 10px;
+  }
+}
+
+@keyframes maximizeLogo {
+  from {
+    width: 50px;
+    height: 50px;
+    right: 10px;
+    bottom: 10px;
+  }
+  to {
+    width: 85%;
+    height: auto;
+    right: 0;
+    bottom: 0;
+  }
+}
+
 @keyframes fadeIn {
   from { opacity: 0; }
   to { opacity: 1; }
@@ -479,6 +509,7 @@ button:focus {
 /* --------- */
 /* Projects */
 /* --------- */
+
 .project-section {
   position: relative !important;
   padding-top: 150px !important;
@@ -489,28 +520,10 @@ button:focus {
 .project-card {
   padding-top: 20px !important;
   padding-bottom: 20px !important;
-  padding-left: 25px !important;
-  padding-right: 25px !important;
+  padding-left: 20px !important;
+  padding-right: 20px !important;
   height: auto !important;
 }
-
-.project-card-view {
-  position: relative;
-  overflow: hidden;
-  box-shadow: 0 4px 5px 3px rgba(119, 53, 136, 0.459);
-  color: black;
-  background-color: transparent;
-  opacity: 100.9;
-  transition: opacity 20.5s ease, box-shadow 20.5s ease; /* Sadece opacity ve box-shadow için geçiş efekti */
-  height: 100%;
-}
-
-
-.project-card-view:hover {
-  box-shadow:none; /* Kartın üzerine gelindiğinde gölge efekti */
-  /* Ölçeklendirme (scale) efektini kaldırdık */
-}
-
 
 
 .blog-card {
@@ -545,10 +558,11 @@ button:focus {
 }
 
 .card-img-top {
-  padding: 20px !important;
-  opacity: 0.8 !important;
-  border-radius: 10px !important;
+  padding: 0 !important;
+  opacity: 1 !important;
+  background-color: transparent !important;
 }
+
 
 .blog-img {
   padding: 0px !important;
